--- a/program/tests/CMakeLists.txt
+++ b/program/tests/CMakeLists.txt
@@ -1,10 +1,11 @@
 add_executable(regex_tests
     main.cpp
-    correctness_tests.cpp
-    exception_tests.cpp
     ast_builder.h
     test_framework.h
-)
+    correctness_tests.cpp
+    exception_tests.cpp
+    vizualization_tests.cpp
+    )
 
 target_include_directories(regex_tests PRIVATE
     ${CMAKE_SOURCE_DIR}/lib
